Add, update flutter javsscript

--- a/Javasript/JS_2021.md
+++ b/Javasript/JS_2021.md
@@ -4,12 +4,67 @@
 
 > Dynamically typed - Any datatype value can be stored in any variable.In other words, JS assign variable values at run-time.
 >
+> ```js
+> var a = 1;
+> a = 'Javascript';
+> console.log(a);
+> ```
+>
+> 
+>
 > Interpreted - JS code is not pre-compiled but instead compiled, evaluated, executed at runtime
 
 ### How do web page works?
 
-![alt image](https://raw.githubusercontent.com/msgtobala/My-Books/master/images/how-browser-works.png)
+![How web page works](https://raw.githubusercontent.com/msgtobala/My-Books/master/images/how-browser-works.png)
 
 ### How JS works?
 
-![image-20210509181904911](/Users/apple/Library/Application Support/typora-user-images/image-20210509181904911.png)
+![How JS works](https://raw.githubusercontent.com/msgtobala/My-Books/master/images/how%20js%20works.png)
+
+> **Javascript** does not wants **variables** to be decalred before
+
+### Where does JS can run?
+
+* Browser
+* Servers
+
+![HOW JS RUN](https://github.com/msgtobala/My-Books/blob/master/images/JS%20and%20Node%20JS.png?raw=true)
+
+> JS cannot access local file system.
+
+#### Various Js Engines
+
+* Chrome - V8, 
+* Firefox - Spider Monkey, 
+* IE - Chakra, Nitro
+* Safari - SquirrelFish
+
+## History of JS
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
