Add, update flutter javsscript

--- a/Javasript/JS_2021.md
+++ b/Javasript/JS_2021.md
@@ -10,8 +10,6 @@
 > console.log(a);
 > ```
 >
-> 
->
 > Interpreted - JS code is not pre-compiled but instead compiled, evaluated, executed at runtime
 
 ### How do web page works?
@@ -41,6 +39,114 @@
 * Safari - SquirrelFish
 
 ## History of JS
+
+![History of JS](https://raw.githubusercontent.com/msgtobala/My-Books/master/images/lifetime%20of%20JS.png)
+
+> ECMA - European Computer Manufacturer Association(Manitains ECMAscript, a language developed ECMA.JS implements in ECMAscript)
+
+### Versions of JS
+
+ES5, ES6 and ....,
+
+### How to include JS in HTML
+
+```html
+<script src='path_to_js'></script>
+```
+
+> script tag is not a self closing tag. So always close the script tag.
+
+> Also include **script** tag at the end of the file(may be after the body) or use **defer** script
+
+#### Rules of including JS file
+
+* Script required </script>
+* Always include JS in seperate file
+* Always include JS at the end of the file after body
+* Order of JS matters,
+  * Any dependent file should be included first
+  * Any third party library JS files should be included first
+
+### Variables and Constants
+
+**Variables** are storage containers that stores any value inside of it
+
+```js
+var a = 1;
+let b = 'JS';
+const c = [1, 2, 3];
+```
+
+Reassignment of values is possible
+
+```js
+var a = 1;
+a = 2;
+```
+
+#### Let
+
+This declares/initializes a variable that can change.
+
+```js
+var a = 1;
+a = 2;
+```
+
+#### Const
+
+This initializes a variable that cannot change
+
+```js
+const a = 1;
+a = 2; (Not possible, gives error)
+```
+
+> Use **constants** more often as possible.
+
+#### Recommendation of variable naming
+
+* Use camel case(Ex: userName)
+* Use constants(const) more often
+* Use Meaningful names(Ex: userName, password)
+
+> JS is case sensitive 
+>
+> ```js
+> var a = 1;
+> var A = 1;
+> ```
+>
+> The above two are not same
+
+* digits are allowed at last `let age1 = 21;`
+* No special characters are allowed except $ `let $myage = 21; `
+* _ is allowed `let _myAge = 21;` but dont use at the word seperation(Ex: user_name).In other words **snake casing** is not recommended
+* should not start with digits and special characters except $ `let 12Age = 21;`
+* No keywords are allowed as variable name `let while = 1`, while is  keyword
+
+#### Declartions
+
+```js
+let a;
+```
+
+#### Initialization
+
+```js
+let a = 0;
+```
+
+> Print any value to output using **console.log()**
+>
+> ```js
+> let a = 0;
+> console.log(a); // 0
+> ```
+
+
+
+
 
 
 
