--- a/Javasript/JS_2021.md
+++ b/Javasript/JS_2021.md
@@ -58,6 +58,16 @@ ES5, ES6 and ....,
 
 > Also include **script** tag at the end of the file(may be after the body) or use **defer** script
 
+### Core Fundamentals of JS
+
+Everything in JS happens inside of **Execution context**
+
+#### What is Execution context?
+
+Execution context is a big container where the actual code execuets.
+
+![image-20210516155707077](/Users/apple/Library/Application Support/typora-user-images/image-20210516155707077.png)
+
 #### Rules of including JS file
 
 * Script required </script>
@@ -144,7 +154,9 @@ let a = 0;
 > console.log(a); // 0
 > ```
 
+#### Operators
 
+Operators are used for data manipulation. This includes `+`, `-`, `*`, `/`, `%`, `=`, `&&`, `||`, `?`, `*=`, `+=`, `++`, `--` and more.
 
 
 
