--- a/Javasript/JS_2021.md
+++ b/Javasript/JS_2021.md
@@ -66,7 +66,7 @@ Everything in JS happens inside of **Execution context**
 
 Execution context is a big container where the actual code execuets.
 
-![image-20210516155707077](/Users/apple/Library/Application Support/typora-user-images/image-20210516155707077.png)
+![image-20210516155707077](../images/execution-context.png)
 
 #### Rules of including JS file
 
